Change to make emoji names lowercase internally

--- a/emoji/data/text/locale/en/fighters.csv
+++ b/emoji/data/text/locale/en/fighters.csv
@@ -2,13 +2,13 @@ Changed,Name,Name_en,Notes,
 ,Warrior,[2694-border][1f9d1-border],Player character,
 ,Thief,[1f4b0-border][1f9d1-border],Player character,
 ,Inventor,[1f39b-border][1f9d1-border],Player character,
-,Witch,[1f9d9-200D-2640-FE0F-border],Player character,
+,Witch,[1f9d9-200d-2640-fe0f-border],Player character,
 ,Robot,[1f916-border],Player character,
 ,Jester,[1f0cf-border][1f9d1-border],Player character,
 ,Magician,[1fa84-border],Think a street magician or the sort of magician who might perform at childrens parties,
-,Space Marine,[1f468-200D-1f680-border],Big army guy in a space suit with a plasma cannon,
+,Space Marine,[1f468-200d-1f680-border],Big army guy in a space suit with a plasma cannon,
 ,Vacuum,[1f4a8-border][1f5d1-border],A vacuum cleaner,
-,Gardener,[1f468-200D-1f33e-border],A rabbit with a shovel,
+,Gardener,[1f468-200d-1f33e-border],A rabbit with a shovel,
 ,Hothead,[1f975-border][1f646-border],A fireball with legs and a face. Looks like a biker.,
 ,Robobot,[1f52b-border][1f916-border],Like a 50s robot,
 ,Slime,[1f366-border],Like an ice cream cone – but instead of ice cream contains slime,
@@ -18,17 +18,17 @@ Changed,Name,Name_en,Notes,
 ,Baby Squid,[1f476-border][1f991-border],A baby squid,
 ,Sticky Hands,[1fa80-border][1f590-border],A kid on a skateboard with an extendable glove that steals items from you,
 ,Bully,[1faa8-border][1f9d1-border],A big mean guy who throws rocks at you,
-,Alchemist,[1f469-200D-1f52c-border],A female chemist – can use a potion that transforms into a bear,
+,Alchemist,[1f469-200d-1f52c-border],A female chemist – can use a potion that transforms into a bear,
 ,Copycat,[1fa9e-border][1f9d1-border],Looks like a big mirror wearing a cloak – copies your moves,
 ,Marshmallow,[1f3d5-border][1f36c-border],A marshmallow on fire,
 ,Mimic,[1f9f0-border][1f608-border],A monster hiding in a treasure chest,
-,Sorceress,[1f9f9-border][1f9d9-200D-2640-FE0F-border],A witch on a broomstrick - distractedly reading her phone,
+,Sorceress,[1f9f9-border][1f9d9-200d-2640-fe0f-border],A witch on a broomstrick - distractedly reading her phone,
 ,Stereohead,[1f4fb-border][1f646-border],A man in a suit with a stereo for a head,
-,Wizard,[1f9d9-200D-2642-FE0F-border],A wizard,
+,Wizard,[1f9d9-200d-2642-fe0f-border],A wizard,
 ,Keymaster,[1f511-border][1f9d1-border],A thin man decorated with dozens of keys over his hands and face,
 ,Sneezy,[1f927-border][1f994-border],A hedgehog with a cold – when it sneezes it's spines fly out and attack you,
 ,Dire Wolf,[1f43a-border],The older parent of the baby wolf from before,
-,Handyman,[1f468-200D-1f527-border],A handyman. Has six hands and lots of tools,
+,Handyman,[1f468-200d-1f527-border],A handyman. Has six hands and lots of tools,
 ,Fireman,[fire-border][1f9d1-border],LITERALLY A MAN MADE OUT OF FIRE - Not a firefighter,
 ,Kraken,[1f991-border],The older parent of the baby squid from before,
 ,Snowman,[26c4-border],A handsome man made out of snow,
@@ -45,31 +45,31 @@ Changed,Name,Name_en,Notes,
 ,Madison,[1f467-border],Previously girl scout – a tiny American girl who sells cookies to raise money for charity,
 ,Scathach,[1fa96-border][1f469-border],A powerful warrior from Irish mythology. Looks like a young amoured female soldier,
 ,Rose,[1f339-border],A rose like the flower with a sword and shield,
-,Warlock,[26ab-border][1f9d9-200D-2642-FE0F-border],An old man in a cloak who casts occult spells,
+,Warlock,[26ab-border][1f9d9-200d-2642-fe0f-border],An old man in a cloak who casts occult spells,
 ,Wisp,[1f47b-border],A small glowing ghost figure made out of fire,
 ,Aoife,[2694-border][1f469-border],Scathach's sister in Irish mythology. Aoife is a relatively common Irish first name pronounced Eee-Fa - rhymes with Tifa,
 ,Lady Luck,[1f469-border][1f340-border],A goddess of chance and fortune – greek mythology calls her Tyche – Roman mythology calls her Fortuna. She is the presenter of the Dicey Dungeons gameshow.,
 ,Cactus,[1f335-border],A worried looking cactus plant – holding a spear and a small shield,
-,Pirate,[1f3f4-200D-2620-FE0F-border],A very large pirate with a ginger beard,
+,Pirate,[1f3f4-200d-2620-fe0f-border],A very large pirate with a ginger beard,
 ,Bounty Hunter,[1f9d0-border][1f47d-border],A green space alien wearing a monocle and leaning against a futuristic motorcycle,
 ,Aurora,[1f326-border],A weather goddess surrounded by clouds and storms. Named for Roman god of dawn,
 ,Rhino Beetle,[1f98f-border][1fab2-border],A tough looking beetle with a big axe,
 ,Cowboy,[1f920-border],A cat dressed up in cowboy gear,
 ,Gargoyle,[1faa8-border][1f608-border],Gargoyle made of stone,
-,Singer,[1f469-200D-1f3a4-border],A singer performing on Piano,
+,Singer,[1f469-200d-1f3a4-border],A singer performing on Piano,
 ,Drain Monster,[1f573-border][1f608-border],A slimy monster that maybe lives in a drain or sewer,
-,Audrey,[1F3CB-FE0F-200D-2640-FE0F-border],A super strong heavy female weight lifter,
-,Drake,[1f9db-200D-2642-FE0F-border],Vampire!,
+,Audrey,[1f3cb-fe0f-200d-2640-fe0f-border],A super strong heavy female weight lifter,
+,Drake,[1f9db-200d-2642-fe0f-border],Vampire!,
 ,Buster,[1f432-border],Huge fire breathing lizard,
 ,Beatrice,[1f478-border][1f41d-border],Final name for Queen Bee,
 ,Rotten Apple,[1fab1-border][1f34e-border],Looks like an apple on the map but is an enemy with a worm in it,
-,Yolanda,[1f6d2-border][1f9dd-200D-2640-FE0F-border],Name of the shopkeeper imp,
-,Ned,[1f528-border][1f9dd-200D-2642-FE0F-border],Name of the blacksmith imp,
-,Val,[1f91d-border][1f9dd-200D-2640-FE0F-border],Name of the trader imp,
+,Yolanda,[1f6d2-border][1f9dd-200d-2640-fe0f-border],Name of the shopkeeper imp,
+,Ned,[1f528-border][1f9dd-200d-2642-fe0f-border],Name of the blacksmith imp,
+,Val,[1f91d-border][1f9dd-200d-2640-fe0f-border],Name of the trader imp,
 ,Warrior?,[2694-border][1f9d1-border][2753-border],Parallel Universe,
 ,Thief?,[1f4b0-border][1f9d1-border][2753-border],Parallel Universe,
 ,Inventor?,[1f39b-border][1f9d1-border][2753-border],Parallel Universe,
-,Witch?,[1f9d9-200D-2640-FE0F-border][2753-border],Parallel Universe,
+,Witch?,[1f9d9-200d-2640-fe0f-border][2753-border],Parallel Universe,
 ,Robot?,[1f916-border][2753-border],Parallel Universe,
 ,Jester?,[1f0cf-border][1f9d1-border][2753-border],Parallel Universe,
 ,Pumpkin Spice,[1f383-border],New Halloween enemy - slender scary creature with a pumpkin head,
