Add "Level up" text

--- a/emoji/data/text/locale/en/strings.csv
+++ b/emoji/data/text/locale/en/strings.csv
@@ -67,6 +67,7 @@ Changed?,String,String_en,Location,Notes,
 ,can only be killed with a wooden stake,[1f915-border][26d4-border][1fab5-border][1f4cc-border][27a1-border][26d4-border][26b0-border],Combat,Innate text,
 ,is shocked every turn,[1f4e5-border][shock-border][267e-border][231b-border],Combat,Innate text,
 ,Back to Title,[23ea-border],Editor,Button: Back to title screen,
+,Level Up,[2795-border][1f4aa-border],Editor,Button: Level up in the editor,
 ,Preview upgrade?,[1f440-border][1f6e0-border][2795-border][2753-border],Spellbook,Toggle to preview the upgraded version of a spell,
 ,Change Spell,[2194-border][1f6e0-border],Spellbook,Button: Change the prepared spell,
 ,Ok,[1f44d-border],Equipment Menu,Button: Confirm,
